--- a/frontend/3dcitydb-web-map/css/style.css
+++ b/frontend/3dcitydb-web-map/css/style.css
@@ -133,6 +133,64 @@ body {
     font-size: 14px;
 }
 
+#formSimulateContainer {
+    position: absolute;
+    bottom: 150px;
+    left: 25px;
+    max-width: fit-content;
+    padding: 10px;
+    border: 1px solid #4c4c4c;
+    border-radius: 14px;
+    font-size: 14px;
+    color: #000000;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(10px);
+}
+
+#formSimulateContainer ul {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+
+
+#formSimulateContainer button {
+    width: 100%;
+    outline: none;
+    border: none;
+    border-radius: 4px;
+    transition: all 0.2s;
+    font-size: 14px;
+    padding: 4px;
+}
+
+#formSimulateContainer button:hover {
+    color: #ffffff;
+    background-color: #066ac9;
+}
+
+#formSimulateContainer input {
+    margin-top: 4px;
+    padding: 4px;
+    border: none;
+    outline: none;
+    border-radius: 4px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 /*#longitudeInput, #latitudeInput, #heightInput {
     font-size: 14px;
 }*/
