--- a/frontend/3dcitydb-web-map/css/style.css
+++ b/frontend/3dcitydb-web-map/css/style.css
@@ -110,6 +110,7 @@ body {
 .toolbar--expanded {
     opacity: 1 !important;
     visibility: visible !important;
+    z-index: 2;
 }
 
 .infoPanel {
@@ -156,23 +157,6 @@ body {
     list-style-type: none;
 }
 
-
-
-#formSimulateContainer button {
-    width: 100%;
-    outline: none;
-    border: none;
-    border-radius: 4px;
-    transition: all 0.2s;
-    font-size: 14px;
-    padding: 4px;
-}
-
-#formSimulateContainer button:hover {
-    color: #ffffff;
-    background-color: #066ac9;
-}
-
 #formSimulateContainer input {
     margin-top: 4px;
     padding: 4px;
@@ -191,6 +175,53 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
+#tryChartContainer {
+    position: absolute;
+    left: 25px;
+    top: 135px;
+    display: none;
+    width: 600px;
+    border-radius: 8px;
+}
+
+#simulateButton {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4px;
+    width: 100%;
+    padding: 4px 8px;
+    outline: none;
+    border: none;
+    border-radius: 4px;
+    font-size: 14px;
+    transition: all 0.2s;
+}
+
+#simulateButton:hover {
+    cursor: pointer;
+    color: #ffffff;
+    background-color: #066ac9;
+}
+
+#simulateButton:disabled {
+    pointer-events: none;
+}
+
+.simulate-button__loader {
+    display: none;
+    width: 20px;
+    height: 20px;
+}
+
+.simulate-button__loader--visible {
+    display: inline;
+}
+
+.simulate-button__label {
+    height: 20px;
+    margin-top: 3px;
+}
 /*#longitudeInput, #latitudeInput, #heightInput {
     font-size: 14px;
 }*/
