--- a/frontend/3dcitydb-web-map/css/style.css
+++ b/frontend/3dcitydb-web-map/css/style.css
@@ -140,7 +140,7 @@ body {
 
 #formSimulateContainer {
     position: absolute;
-    bottom: 150px;
+    bottom: 200px;
     left: 25px;
     max-width: fit-content;
     padding: 10px;
@@ -174,10 +174,12 @@ input[type=number] {
 #tryChartContainer {
     position: absolute;
     left: 25px;
-    top: 135px;
+    top: 175px;
     display: none;
     width: 600px;
     border-radius: 8px;
+    z-index: 2;
+    transition: all 0.2s;
 }
 
 #simulateButton {
